src/styles/global.css
/* ... */
/* Stunner */
  .h-250c {
    height: 447px!important;
  }

  .carousel .sliderSwipe {

    /* width: 500px;
  
    height: 536px; */
    min-height: 447px;
  
  }
  

  .carousel {

    width: 580px;
  
    height: 536px;
    /* min-height: 536px; */
    padding: 0% 30px 2rem 30px;
  }
  

  @media screen and (max-width: 500px) {
    .carousel .sliderSwipe {
      /* width: 500px;
      height: 536px; */
      min-height: 85.5vw;
    
    }
    .h-250c  {
  
      height: 85.5vw!important; 
  
    }
    .carousel {
      width: 100vw;
      height: 109vw;
      padding : 0!important
      /* min-height: 436px; */
      
  
    }

    .stunner_swiper .swiper-button-prev, .stunner_swiper .swiper-button-next {
      display: none!important;
    }
  
  }

   .stunner_swiper .swiper-button-prev {
    left: -10%!important;
    color: rgb(223, 7, 7);
    top: 42%!important;
  }

  .stunner_swiper .swiper-button-next{
    right: -10%!important;
    color: rgb(223, 7, 7);
    top: 42%!important;
  } 

  .loader-stunner {
    -webkit-mask:linear-gradient(-60deg,#000 30%,#0005,#000 70%) right/300% 100%;

    background-repeat: no-repeat;
    background: rgb(231, 231, 231);
    animation: shimmer 2.5s infinite;
  }

  @keyframes shimmer {

    100% {-webkit-mask-position:left}

  }

  .carousel .swiper-container {
   position: unset!important;
  }
 /* rewards */
 .orange_font{
color: #fd8952;
 }
 .bg_orange{
background-color:rgb(255 237 223);
 }

@media only screen and (max-width: 420px) {
  .videoFooter{
    width: 50%;
  }
}

